# wesleykatez

./: .gitignore  README.md  TECHNICAL_GUIDE.md  analytics.py  app.py  automation.py  database.py  digital_twin.db  gemini_integration.py  insert_sample_data.py  knowledge_base.py  models.py  pyproject.toml  replit.md  requirements.txt  run_scheduler.py  scraper.py
attached_assets/: Pasted--Application-Overview-Digital-Twin-An-AI-Powered-Real-Estate-Command-Center-The-Digita-1754111938336_1754111938338.txt  analytics_1754111477724.py  app_1754111477725.py  automation_1754111477726.py  database_1754111477726.py  index_1754111489360.html  insert_sample_data_1754111477727.py  knowledge_base_1754111477728.py  requirements_1754111477728.txt
knowledge/: palm_jumeirah_crescent_developments.json  palm_jumeirah_restaurants.json  palm_jumeirah_trunk_buildings.json  scraped_property_listings.json
static/: index.html  style.css
uploads/: .gitkeep
